# learning_rust

./: README.md
rust-api-client/: Cargo.toml
rust-api-client/src/: main.rs
rust-restaurant-api/: Cargo.toml  db.sql
rust-restaurant-api/src/: data.rs  db.rs  dev.http  error.rs  handler.rs  main.rs
